Feedback: Update forms and put in temp Covid-19 policy.
This is a complete rework of the intern and mentor feedback forms to
make them clearer, and also putting in changes to support our temporary
Covid-19 internship weekly time commitment policies.

Sorry future self for combining these two commits. :-/

New Fields
---

New fields in the intern feedback forms:

 - Time comments. This allows them to tell us why they haven't been
working 40 hours a week

 - Opt-in information sharing with the community coordinator. The
default is opt-out.

New field in the mentor feedback forms:

 - Mentor report. This is a self-evaluation that mentors fill out. The
information is shared with Outreachy organizers and coordinators.

Change the test suite to handle the new fields.

Privacy Changes
---

There is a new privacy change to the mentor feedback forms. Coordinators
will be able to see all the answers mentors provide.

If the intern opts-in, we share their comments about how their mentor
has been supporting them, and metrics about their mentor support with
their community coordinator. This was requested by some coordinators in
order to get more intern sponsorship and support mentors' request for
employers to support their volunteer time with Outreachy interns.

Add a warning that if the intern opts-in to sharing comments with a
coordinator, and their mentor is a coordinator, they will be sharing the
information directly with the mentor. Add a note as to who is currently
a coordinator and who is a mentor for that intern.

Note: This doesn't cover the case where a mentor is later approved to be
a coordinator.

Covid-19 policies
---

Change various form names and help texts to remove references to
"full-time" or "40 hours a week". Add table that describes our temporary
minimum time commitment policies due to Covid-19.

Clean-up
---

 - Rearrange forms to have sections that make sense to the person
filling them out. Have sections for self-evaluation and for evaluating
the other per

--- a/home/templates/home/final_feedback.html
+++ b/home/templates/home/final_feedback.html
@@ -43,6 +43,7 @@ Final Feedback for current_round.official_name
 						<td>How long does it take the mentor to review and give feedback on their intern's contributions?</td>
 					</tr>
 					{% if final_intern_status == i.SUBMITTED %}<tr><td colspan="3"><p>Intern's report on the support they received from their mentor:</p><p>{{ i.finalinternfeedback.mentor_support|linebreaksbr }}</p></td></tr>{% endif %}
+					{% if i.finalmentorfeedback %}<tr><td colspan="3"><p>Mentor's report on the support they are providing:</p><p>{{ i.finalmentorfeedback.mentor_report|linebreaksbr }}</p></td></tr>{% endif %}
 					<tr><td colspan="3"><b>Intern progress</b></td></tr>
 					<tr>
 						<td>{% if i.finalmentorfeedback %}{% if i.finalmentorfeedback.intern_help_requests_frequency == i.finalmentorfeedback.ONCE_DAILY or i.finalmentorfeedback.intern_help_requests_frequency == i.finalmentorfeedback.MULTIPLE_DAILY %}<button class="btn btn-warning">Frequent requests for help</button>{% elif i.finalmentorfeedback.intern_help_requests_frequency == i.finalmentorfeedback.MULTIPLE_WEEKLY or i.finalmentorfeedback.intern_help_requests_frequency == i.finalmentorfeedback.ONCE_WEEKLY %}<button class="btn btn-success">Asks for help at least weekly</button>{% else %}<button class="btn btn-danger">Infrequently asking for help</button>{% endif %}<br>{{ i.finalmentorfeedback.get_intern_help_requests_frequency_display }}{% endif %}</td>
@@ -64,6 +65,7 @@ Final Feedback for current_round.official_name
 						<td>{% if i.finalinternfeedback %}{% if i.finalinternfeedback.hours_worked == i.finalinternfeedback.HOURS_40 or i.finalinternfeedback.hours_worked == i.finalinternfeedback.HOURS_50 or i.finalinternfeedback.hours_worked == i.finalinternfeedback.HOURS_60 %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.finalinternfeedback.get_hours_worked_display }} per week{% endif %}</td>
 						<td>Is the intern putting in a full-time effort?</td>
 					</tr>
+					{% if i.finalinternfeedback.time_comments %}<tr><td colspan="3"><p>Intern's comments on their time commitments:</p><p>{{ i.finalinternfeedback.time_comments }}</p></td></tr>{% endif %}
 					<tr>
 						<td>{% if i.finalmentorfeedback %}{{ i.finalmentorfeedback.last_contact }}{% endif %}</td>
 						<td>{% if i.finalinternfeedback %}{{ i.finalinternfeedback.last_contact }}{% endif %}</td>
