--- a/home/templates/home/finalinternfeedback_form.html
+++ b/home/templates/home/finalinternfeedback_form.html
@@ -15,15 +15,21 @@ Final internship feedback
 
 <h2>Privacy</h2>
 
-<p>Your answers will only be seen by Outreachy organizers and by Software Freedom Conservancy accounting staff. Your mentor will not be able to see if you submit feedback to us. If Outreachy organizers need to discuss your feedback with your mentor, we will draft a response with you before contacting your mentor.</p>
+<p>Your answers about your internship efforts will only be seen by Outreachy organizers and by Software Freedom Conservancy accounting staff.</p>
+
+<p>Your mentor will not be able to see your answers about your internship efforts. If Outreachy organizers need to discuss your feedback with your mentor, we will draft a response with you before contacting your mentor.</p>
 
 <p>Please be honest about your relationship with your mentor. We want to provide you help and ensure you get the support you need.</p>
+
+<p>By default, your mentor will not be able to see your answers about mentor support. If you opt in, we will share your mentor feedback with your community coordinator. Please note that if you opt in and your mentor is a community coordinator, you will be sharing your feedback with them. Your mentors are: {{ internship.mentor_names }}. Your community coordinators are: {{ internship.coordinator_names }}.</p>
 
 <h2>Metrics for Success</h2>
 
 <p>Outreachy organizers view this internship as a fellowship. Mentors should not expect a certain project to be completed by the intern, but rather expect that the intern's work will be adjusted to the level of their ability, their interests, and the project's priorities throughout the internship. Outreachy organizers prefer not to fail people in the program as long as they are working full-time on the project.</p>
 
-<p>The most important metric for success is whether you are putting in a full-time, 40 hours a week effort. If your mentor indicates you aren't putting in a full-time effort, we compare your feedback to your mentor's feedback. We work with your mentor to draft a response to you, and then contact you to work on a plan of action to get you back on track.</p>
+<p>The most important metric for success is whether you are putting in the minimum internship time commitment. Please see the temporary policy below for a definition of "minimum time commitment."</p>
+
+<p>If you aren't putting in the minimum internship time commitment, Outreachy organizers and mentors use the other metrics to come up with a plan to get you back on track. Outreachy organizers also gather metrics about mentor engagement to ensure success for all Outreachy mentors.</p>
 
 <form method="post" action="">
 {% csrf_token %}
@@ -49,6 +55,20 @@ Final internship feedback
 			</div>
 			{% if field.help_text %}
 				<div class="card-footer bg-white">{{ field.help_text|safe }}</div>
+			{% endif %}
+		</div>
+	{% elif 'average number of hours per week' in field.label_tag %}
+		{% include 'home/snippet/covid-19-time-policy.html' %}
+		<div class="form-group card">
+			{{ field.errors }}
+			<div class = "card-header">
+				{{ field.label_tag }}
+			</div>
+			<div class = "card-body">
+				{{ field }}
+			</div>
+			{% if field.help_text %}
+				<div class="card-footer bg-white">{{ field.help_text }}</div>
 			{% endif %}
 		</div>
 	{% else %}
