--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -52,6 +52,7 @@ Initial Feedback for {{ current_round.official_name }}
 						<td>On average, how long does it take the mentor to respond to intern questions or requests for feedback?</td>
 					</tr>
 					{% if initial_intern_status == i.SUBMITTED %}<tr><td colspan="3"><p>Intern's report on how the support they received from their mentor:</p><p>{{ i.initialinternfeedback.mentor_support|linebreaksbr }}</p></td></tr>{% endif %}
+					{% if i.initialmentorfeedback %}<tr><td colspan="3"><p>Mentor's report on the support they are providing:</p><p>{{ i.initialmentorfeedback.mentor_report|linebreaksbr }}</p></td></tr>{% endif %}
 					<tr><td colspan="3"><b>Intern progress</b></td></tr>
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.in_contact %}<button class="btn btn-success">In contact</button></td>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% else %}{% endif %}</td>
@@ -78,6 +79,7 @@ Initial Feedback for {{ current_round.official_name }}
 						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_40 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_50 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_60 %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.initialinternfeedback.get_hours_worked_display }} per week{% endif %}</td>
 						<td>Is the intern putting in a full-time effort?</td>
 					</tr>
+					{% if i.initialinternfeedback.time_comments %}<tr><td colspan="3"><p>Intern's comments on their time commitments:</p><p>{{ i.initialinternfeedback.time_comments }}</p></td></tr>{% endif %}
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{{ i.initialmentorfeedback.last_contact }}{% endif %}</td>
 						<td>{% if i.initialinternfeedback %}{{ i.initialinternfeedback.last_contact }}{% endif %}</td>
