Add description to informal chat contacts page

--- a/home/templates/home/informal_chat_contacts.html
+++ b/home/templates/home/informal_chat_contacts.html
@@ -9,6 +9,8 @@ Informal Chat Contacts
 
 <h1>Informal Chat Contacts</h1>
 
+<p>Interns and alums are welcome to contact the following people for informal chats.</p>
+
 {% for contact in contacts %}
 	<div class="card border mt-3">
 		<div class="card-header bg-light">{{ contact.get_name }}</div>
