Clarify photo policy

--- a/home/templates/home/comrade_form.html
+++ b/home/templates/home/comrade_form.html
@@ -60,7 +60,7 @@
 				<div class="card-footer bg-white">
 					<p>Photo privacy policy:</p>
 					<ul>
-						<li>Applicant photos will not be displayed to organizers, mentors, or coordinators.</li>
+						<li>Applicant photos will not be displayed to organizers, mentors, or coordinators during the application period and contribution period.</li>
 						<li>Selected interns and alums will have their photos displayed on the <a href='{% url 'alums' %}'>Outreachy alums page</a>.</li>
 						<li>Career chat volunteers will have their photos displayed on the chat volunteers page.</li>
 					</ul>
