Lowercase title of mentor approval form

--- a/home/templates/home/preview/mentorapproval_action.html
+++ b/home/templates/home/preview/mentorapproval_action.html
@@ -2,7 +2,7 @@
 {% load approval_status %}
 
 {% block title %}
-{{ view.kwargs.action|title }} Mentor for {{ mentorapproval.project.short_title }}
+{{ view.kwargs.action|title }} mentor for {{ mentorapproval.project.short_title }}
 {% endblock %}
 
 {% block content %}
